Change from .toList() in .collect(Collectors.toList()) in Combact Behaviour